Cleanups.
* Member to variable.
* String.isEmpty usage.
* Unnecessary local before return.
* Naming conventions
* Integer instantiation
* Dead store to local variable

Change-Id: I96b495245a2505fcbd608965319b3565edf513ff
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>
Reviewed-on: https://git.eclipse.org/r/25766
Tested-by: Hudson CI